header section in nextjs, with modules css and styles in figma

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,13 +1,19 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700&display=swap');
+
+:root {
+  --color-secundario: #588484;
+  --color-principal: #ec7b26;
+  --color-degradados: #aa370f;
+}
+
 html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: "Montserrat", sans-serif;
 }
 
 a {
-  color: inherit;
   text-decoration: none;
 }
 
