--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700&display=swap');
 
 :root {
-  --color-secundario: #588484;
+  --text-primary: #588B8B;
   --color-principal: #ec7b26;
   --color-degradados: #aa370f;
 }
