--- a/components/StepsSection/StepsSection.module.css
+++ b/components/StepsSection/StepsSection.module.css
@@ -1,4 +1,72 @@
 .steps-section-wrapper {
   height: 1247px;
   background-image: url("../../public/background-steps.png");
+  position: relative;
+}
+
+.steps-section-title {
+  text-align: center;
+  padding-top: 181px;
+  font-weight: 700;
+  font-size: 40px;
+  line-height: 32px;
+  text-align: center;
+  letter-spacing: 0.2px;
+  color: #588b8b;
+}
+
+.steps-img-wrapper {
+  position: absolute;
+  top: 0;
+  left: 0;
+  transform: translateX(50%) translateY(50%);
+}
+
+.steps-text-wrapper {
+  display: grid;
+  place-items: center;
+  position: absolute;
+}
+
+.steps-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+}
+
+.steps-text-wrapper div {
+  position: absolute;
+  width: 370px;
+}
+
+.steps-text-wrapper div p {
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 32px;
+  letter-spacing: 0.2px;
+  color: #4a4a4a;
+}
+
+.first-step-text {
+  transform: translate(0rem, -35rem);
+}
+
+.first-step-text h3 {
+  text-align: center;
+}
+
+.second-step-text {
+  transform: translate(35rem, -10rem);
+}
+
+.third-step-text {
+  text-align: center;
+  transform: translate(0rem, 15rem);
+}
+
+.fourth-step-text {
+  text-align: right;
+  transform: translate(-32rem, -10rem);
 }
